# oxital

./: Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
benches/: bitboard_bench.rs
src/: bitboard.rs  board.rs  lib.rs  main.rs  types.rs
