[package]
name = "oxital"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
description = "Chess engine"
readme = "README.md"
repository = "https://github.com/nicolasdumitru/oxital"

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bitboard_bench"
harness = false
